--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,10 @@
     "dependencies": {
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongodb": "^6.2.0",
-        "nodemon": "^3.0.1"
+        "mysql": "^2.18.1",
+        "mysql2": "^3.6.5",
+        "nodemon": "^3.0.1",
+        "sequelize": "^6.35.1",
+        "sequelize-cli": "^6.6.2"
     }
 }
