--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,8 +9,12 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-session": "^1.17.3",
+        "moment": "^2.29.4",
         "mysql": "^2.18.1",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
