--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,8 +14,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "jsonwebtoken": "^9.0.2",
         "moment": "^2.29.4",
-        "mysql": "^2.18.1",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
         "sequelize": "^6.35.1",
