--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
@@ -19,6 +20,7 @@
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
+        "path": "^0.12.7",
         "sequelize": "^6.35.1",
         "sequelize-cli": "^6.6.2"
     }
