--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-    "name": "restaurant_proj",
-    "version": "1.0.0",
-    "main": "index.js",
-    "repository": "https://github.com/TrungQuoc109/Restaurant_web.git",
-    "author": "",
-    "license": "",
-    "packageManager": "yarn@4.0.1",
-    "workspaces": [
-        "./packages/*"
-    ],
-    "scripts": {
-        "all": "concurrently --kill-others-on-fail \"yarn dev:server\" \"yarn dev:web\"",
-        "dev:web": "yarn workspace client dev",
-        "dev:server": "yarn workspace server dev"
-    },
-    "dependencies": {
-        "concurrently": "^8.2.0"
-    }
+  "name": "restaurant_proj",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/TrungQuoc109/Restaurant_web.git",
+  "author": "",
+  "license": "",
+  "workspaces": [
+    "./packages/*"
+  ],
+  "scripts": {
+    "all": "npm-run-all  dev:server dev:web",
+    "dev:server": "cd packages/server && npm run dev",
+    "dev:web": "cd packages/client && npm run dev"
+  },
+  "dependencies": {
+    "concurrently": "^8.2.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
